--- a/k8s-pod.yaml
+++ b/k8s-pod.yaml
@@ -39,10 +39,22 @@ spec:
     - name: git-clone
       image: alpine/git:1.0.4
       command: ['/bin/sh', '-c']
-      args: ['git clone --branch v1.0.0 https://github.com/nfrankel/configmgmt-properties.git && mv configmgmt-properties/dev/* /config']
+      args: ['git clone --branch $(props.version) https://github.com/nfrankel/configmgmt-properties.git && mv configmgmt-properties/$(props.env)/* /config']
       volumeMounts:
         - name: config
           mountPath: /config
+      envFrom:
+        - configMapRef:
+            name: clone-props
   volumes:
     - name: config
       emptyDir: {}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: clone-props
+  namespace: cfgmgmt
+data:
+  props.version: v1.0.0
+  props.env: stg
